# adventcalendar2023

./: CMakeLists.txt  README.md  adventcalendar2023.project  adventcalendar2023.workspace  day1.cpp  day1.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
data/: input_day2.txt  test_day3.txt  test_day6.txt
src/: base_class.cpp  base_class.hpp  day1.cpp  day1.hpp  day10.cpp  day10.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  day9.hpp  main.cpp
tests/: day10.cpp  day5.cpp  day7.cpp
